# gaussian-multiview-consistency-evaluation

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
configs/: default.yaml  prompts.json
data/raw/: README.md
data/renders/: README.md
docs/: index.md
results/: README.md
scripts/: evaluate_renders.py  make_gallery.py  run_ablation_matrix.sh
src/gmce/: failure_taxonomy.py  io.py  metrics.py
