[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian-multiview-consistency-eval"
version = "0.1.0"
description = "Prompt-grounded multi-view consistency evaluation for generated 3D Gaussians."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Muhammad Afaq Saeed"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
